--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@
         function loadRealVideo() {
              document.getElementById('video-container').innerHTML = `
              <iframe width="100%" height="100%" 
-                src="https://www.youtube.com/embed/vVhKA9Av6vA?autoplay=1&rel=0" 
+                src="https://www.youtube.com/embed/vVhKA9Av6vA&autoplay=1" 
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -1127,3 +1127,4 @@
     </script>
 </body>
 </html>
+
