--- a/index.html
+++ b/index.html
@@ -441,6 +441,12 @@
                 <i class="fas fa-music xp-icon icon-music"></i>
                 <span>Nhịp Tim</span>
             </div>
+
+            <!-- ICON HỘP MÙ (LOVE BOX) -->
+            <div class="desktop-icon" onclick="openWindow('box-window');">
+                <i class="fas fa-gift xp-icon icon-box"></i>
+                <span>Love Box</span>
+            </div>
         </div>
 
         <!-- WINDOWS -->
@@ -1624,6 +1630,7 @@
     </script>
 </body>
 </html>
+
 
 
 
