--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
                 <span>Nhịp Tim</span>
             </div>
 
-            <!-- ICON HỘP MÙ (LOVE BOX) -->
-            <div class="desktop-icon" onclick="openWindow('box-window');">
+            <!-- DÁN ĐOẠN NÀY VÀO ĐỂ HIỆN ICON LOVE BOX -->
+            <div class="desktop-icon" onclick="openWindow('gacha-window')">
                 <i class="fas fa-gift xp-icon icon-box"></i>
                 <span>Love Box</span>
             </div>
@@ -1717,14 +1717,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
