--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
 
         <!-- Confession -->
-        <div id="secret-window" class="window"><div class="window-header" onmousedown="startDrag(event, 'secret-window')"><div class="window-title"><i class="fas fa-terminal mr-2"></i> confession.exe</div><div class="win-btn-close" onclick="closeWindow('secret-window')"><i class="fas fa-times"></i></div></div><div class="window-body"><div class="terminal-content"><div id="typewriter-text" class="mb-6 whitespace-pre-wrap leading-relaxed"></div><div id="hidden-content" class="hidden flex flex-col items-center justify-center opacity-0 transition-opacity duration-1000 mt-4 pb-4"><img src="https://images.unsplash.com/photo-1524504388940-b1c1722653e1?q=80&w=1887&auto=format&fit=crop" class="w-48 border-4 border-white transform rotate-2 mb-4"><p class="text-center text-gray-400 text-xs font-mono mb-4">> Ngoại lệ chưa được xử lý...</p><div class="flex space-x-4"><button class="xp-button font-bold text-blue-600" onclick="acceptLove()">Đồng ý</button><button class="xp-button" onclick="alert('Nút này bị liệt rồi!')">Từ chối</button></div></div></div></div></div>
+        <div id="secret-window" class="window"><div class="window-header" onmousedown="startDrag(event, 'secret-window')"><div class="window-title"><i class="fas fa-terminal mr-2"></i> confession.exe</div><div class="win-btn-close" onclick="closeWindow('secret-window')"><i class="fas fa-times"></i></div></div><div class="window-body"><div class="terminal-content"><div id="typewriter-text" class="mb-6 whitespace-pre-wrap leading-relaxed"></div><div id="hidden-content" class="hidden flex flex-col items-center justify-center opacity-0 transition-opacity duration-1000 mt-4 pb-4"><img src="./em.jpg" class="w-48 border-4 border-white transform rotate-2 mb-4"><p class="text-center text-gray-400 text-xs font-mono mb-4">> Ngoại lệ chưa được xử lý...</p><div class="flex space-x-4"><button class="xp-button font-bold text-blue-600" onclick="acceptLove()">Đồng ý</button><button class="xp-button" onclick="alert('Nút này bị liệt rồi!')">Từ chối</button></div></div></div></div></div>
 
         <!-- GACHA LOVE BOX -->
         <div id="gacha-window" class="window">
@@ -454,4 +454,5 @@
     </script>
 </body>
 </html>
+
 
